program/test/files/Error/scope/return.cps
let a: integer = 2 + 2 + 7;
return a;